--- a/Freedom.Web/Components/_Imports.razor
+++ b/Freedom.Web/Components/_Imports.razor
@@ -9,3 +9,9 @@
 @using Microsoft.JSInterop
 @using Freedom.Web
 @using Freedom.Web.Components
+@using Blazored.Toast
+@using Blazored.Toast.Services
+
+@using Microsoft.Extensions.Localization
+@using Freedom.Web.Locales
+@using System.Globalization
