--- a/Freedom.WebAdmin/Components/Account/Pages/ConfirmEmail.razor
+++ b/Freedom.WebAdmin/Components/Account/Pages/ConfirmEmail.razor
@@ -8,9 +8,9 @@
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Confirm email</PageTitle>
+<PageTitle>Подтвердите адрес электронной почты</PageTitle>
 
-<h1>Confirm email</h1>
+<h1>Подтвердите адрес электронной почты</h1>
 <StatusMessage Message="@statusMessage" />
 
 @code {
@@ -36,13 +36,13 @@
         if (user is null)
         {
             HttpContext.Response.StatusCode = StatusCodes.Status404NotFound;
-            statusMessage = $"Error loading user with ID {UserId}";
+            statusMessage = $"Ошибка при загрузке пользователя с идентификатором {UserId}";
         }
         else
         {
             var code = Encoding.UTF8.GetString(WebEncoders.Base64UrlDecode(Code));
             var result = await UserManager.ConfirmEmailAsync(user, code);
-            statusMessage = result.Succeeded ? "Thank you for confirming your email." : "Error confirming your email.";
+            statusMessage = result.Succeeded ? "Благодарим вас за подтверждение вашего адреса электронной почты." : "Ошибка при подтверждении вашей электронной почты.";
         }
     }
 }
