--- a/Freedom.WebAdmin/Components/Account/Pages/Manage/ChangePassword.razor
+++ b/Freedom.WebAdmin/Components/Account/Pages/Manage/ChangePassword.razor
@@ -10,9 +10,9 @@
 @inject IdentityRedirectManager RedirectManager
 @inject ILogger<ChangePassword> Logger
 
-<PageTitle>Change password</PageTitle>
+<PageTitle>Поменять пароль</PageTitle>
 
-<h3>Change password</h3>
+<h3>Поменять пароль</h3>
 <StatusMessage Message="@message" />
 <div class="row">
     <div class="col-md-6">
@@ -20,21 +20,21 @@
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Please enter your old password." />
-                <label for="old-password" class="form-label">Old password</label>
+                <InputText type="password" @bind-Value="Input.OldPassword" class="form-control" autocomplete="current-password" aria-required="true" placeholder="Введите свой старый пароль." />
+                <label for="old-password" class="form-label">Старый пароль</label>
                 <ValidationMessage For="() => Input.OldPassword" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please enter your new password." />
-                <label for="new-password" class="form-label">New password</label>
+                <InputText type="password" @bind-Value="Input.NewPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Введите свой новый пароль." />
+                <label for="new-password" class="form-label">Новый пароль</label>
                 <ValidationMessage For="() => Input.NewPassword" class="text-danger" />
             </div>
             <div class="form-floating mb-3">
-                <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Please confirm your new password." />
-                <label for="confirm-password" class="form-label">Confirm password</label>
+                <InputText type="password" @bind-Value="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" placeholder="Повторите свой нвоый пароль." />
+                <label for="confirm-password" class="form-label">Подтвердить пароль</label>
                 <ValidationMessage For="() => Input.ConfirmPassword" class="text-danger" />
             </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Update password</button>
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Изменить пароль</button>
         </EditForm>
     </div>
 </div>
