--- a/Freedom.WebAdmin/Components/Account/Pages/Manage/Index.razor
+++ b/Freedom.WebAdmin/Components/Account/Pages/Manage/Index.razor
@@ -9,9 +9,9 @@
 @inject IdentityUserAccessor UserAccessor
 @inject IdentityRedirectManager RedirectManager
 
-<PageTitle>Profile</PageTitle>
+<PageTitle>Профиль</PageTitle>
 
-<h3>Profile</h3>
+<h3>Профиль</h3>
 <StatusMessage />
 
 <div class="row">
@@ -20,15 +20,15 @@
             <DataAnnotationsValidator />
             <ValidationSummary class="text-danger" role="alert" />
             <div class="form-floating mb-3">
-                <input type="text" value="@username" class="form-control" placeholder="Please choose your username." disabled />
-                <label for="username" class="form-label">Username</label>
+                <input type="text" value="@username" class="form-control" placeholder="Введите свое имя пользователя." disabled />
+                <label for="username" class="form-label">Имя пользователья</label>
             </div>
-            <div class="form-floating mb-3">
-                <InputText @bind-Value="Input.PhoneNumber" class="form-control" placeholder="Please enter your phone number." />
+            @* <div class="form-floating mb-3">
+                <InputText @bind-Value="Input.PhoneNumber" class="form-control" placeholder="Введите свой номер телефона." />
                 <label for="phone-number" class="form-label">Phone number</label>
                 <ValidationMessage For="() => Input.PhoneNumber" class="text-danger" />
-            </div>
-            <button type="submit" class="w-100 btn btn-lg btn-primary">Save</button>
+            </div> *@
+            <button type="submit" class="w-100 btn btn-lg btn-primary">Сохранить</button>
         </EditForm>
     </div>
 </div>
